--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "google-map-react": "^1.1.2",
     "react": "^16.8.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3"
   },
